extension/assets/css/popup.css
body {
  font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
  font-size: 10px;
  width: 350px;
  padding: 1px;
}
a {
  text-decoration: none;
  outline: none;
  color: #474747;
}
.center {
  margin: 10px;
  display: block;
  text-align: center;
  font-size: medium;
}
a.center {
  color: #00a0dc;
  cursor: pointer;
}
.row {
  padding: 3px;
}
.row:after {
  content:'';
  display:block;
  clear: both;
}
.row:hover {
  cursor: pointer;
  background-color: #f5f9fc;
}
.spinner {
  display: block;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}
.group {
  border-radius: 3px;
  border: solid #d8d8d8 1px;
  margin: 5px;
}
.group-title {
  color: #333333;
  font-weight: 800;
  background-color: #f5f5f5;
  padding: 5px;
}
.icon {
  height: 12px;
  display: inline-block;
  float: left;
  padding-left: 3px;
  padding-right: 5px;
}
.icon>img {
  width: 12px;
  height: 12px;
}
.title {
  display: inline-block;
  max-width: 192px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  height: 12px;
  line-height: 12px;
  float: left;
}
.time {
  display: inline-block;
  max-width: 70px;
  text-align: right;
  float: right;
  height: 12px;
  line-height: 12px;
}
.container {
  height: 30px;
}
.blocked {
  color: red;
}
.clean {
  color: green;
}
.unstable {
  color: green;
}
.unknown {
  color: purple;
}
.other {
  color: darksalmon;
}
.status {
  float: right;
  font-weight: bold;
}

